--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,8 @@
 // Body
-$body-bg: #f8fafc;
-
+$body-bg: #eeee;
+html{
+    background-color: #eeee;
+}
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
@@ -17,3 +19,10 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+.coolGrenn{
+
+    background:#bbe1bd;
+} 
+.coolRed{
+    background:#fccac7;
+}
