--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,12 @@
 // Variables
 @import 'variables';
 
+@import 'base';
+
+@import 'menu';
+
+@import 'table';
+
+@import 'form';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
