--- a/resources/sass/_menu.scss
+++ b/resources/sass/_menu.scss
@@ -26,8 +26,8 @@ a{
 
 .span-item {
     margin: auto;
-    width: 260px;
-    font-size: 1rem !important;
+    width: 230px;
+    font-size: 0.9rem !important;
 }
 
 .bm-burger-button {
@@ -77,7 +77,7 @@ a{
     /* Stay on top */
     top: 0;
     left: 0;
-    background-image: url("../../../../public/img/nav-bar.jpg");
+    background-image: url("../images/nav-bar.jpg");
     background-color: rgb(21, 45, 77);
     /* Black*/
     overflow-x: hidden;
