--- a/public/css/app.css
+++ b/public/css/app.css
@@ -137,6 +137,10 @@ a {
   background-color: #ffff;
 }
 
+.topTilte {
+  width: 0px;
+}
+
 .form-shadow {
   box-shadow: 2px 0px 20px #c4c4c4;
   padding: 20px;
