--- a/resources/sass/table.scss
+++ b/resources/sass/table.scss
@@ -1,7 +1,9 @@
-
-
 .table-radius{
     box-shadow: 2px 0px 20px rgb(196, 196, 196);
     border-radius: 10px;
     background-color: #ffff;
+}
+
+.topTilte{
+    width: 0px;
 }
