--- a/resources/sass/_menu.scss
+++ b/resources/sass/_menu.scss
@@ -1,8 +1,3 @@
-.fas {
-    color: rgba(255, 255, 255, 0.767);
-    margin-right: 8px;
-}
-
 .bm-item-list {
     margin: 0 !important;
 
@@ -10,17 +5,33 @@
 a{
     text-decoration: none !important;
 }
-.a-item, .li-item{
+.a-item{
+    background-color: #04222e;
+    border: 1px solid rgba(0, 0, 0, 0.322);
     width: 300px;
     height: 65px;
+    text-decoration: none !important;
+    color:white;
+}
+.a-sitem{
+    background-color: #052c3b;
+    border: 1px solid rgba(0, 0, 0, 0.322);
+    width: 300px;
+    height: 65px;
+    text-decoration: none !important;
+    color:white;
+}
+.a-sitem:hover {
+    color: white;
+    background-color:#113442;
+}
+.li-item{
     text-decoration: none !important;
     color:white;
 }
 
 .a-item:hover {
     color: white;
-    background-color: rgba(210, 218, 230, 0.281);
-
 }
 
 .span-item {
@@ -76,8 +87,7 @@ a{
     /* Stay on top */
     top: 0;
     left: 0;
-    background-image: url("../images/nav-bar.jpg");
-    background-color: rgb(21, 45, 77);
+    background-color: #04222e !important;
     /* Black*/
     overflow-x: hidden;
     /* Disable horizontal scroll */
