--- a/resources/sass/_fas.scss
+++ b/resources/sass/_fas.scss
@@ -1,8 +1,8 @@
 .fa-edit{
-    color: blue;
+    color: $blue;
 }
 .fa-hammer{
-    color: blue;
+    color: $blue;
 }
 .fa-angle-down{
     font-size: 18px;
