--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -1,6 +1,6 @@
 .navbar{
-    background-color: #052c3b !important;
+    background-color: $darkBlue !important;
 }
 .nav-link{
-    color: white !important;
+    color: $white !important;
 }
