--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,7 @@ html {
 }
 
 body {
+  font-family: "Merriweather", serif !important;
   box-sizing: content-box;
 }
 
@@ -159,13 +160,51 @@ a {
   font-weight: 100 !important;
 }
 
+.table-param {
+  width: 100%;
+  margin-bottom: 1rem;
+  color: #212529;
+  width: 100%;
+}
+
+.table-param thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+.table-param th,
+.table-param td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+
 .table-radius {
   box-shadow: 2px 0px 20px #c4c4c4;
   border-radius: 10px;
   background-color: #ffff;
 }
 
-.topTilte {
+.table-user {
+  width: 100%;
+  margin-bottom: 1rem;
+  color: #212529;
+  width: 100%;
+}
+
+.table-user thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+.table-user th,
+.table-user td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+
+.top-title {
   width: 0;
 }
 
@@ -173,13 +212,22 @@ th {
   border-top: none !important;
 }
 
-.heightPara {
+tr {
+  font-size: 0.8rem;
+}
+
+.height-param {
   height: 180px;
 }
 
 .form-shadow {
   box-shadow: 2px 0px 20px #c4c4c4;
   padding: 20px;
+}
+
+.input-medium,
+select {
+  width: 240px !important;
 }
 
 .navbar {
